Reverting back to overflow-y: auto; because overflow-y: visible; makes the chat window header disappear :-( Will reopen issue #36

--- a/src/App.css
+++ b/src/App.css
@@ -488,7 +488,7 @@ div.availabilityOptionsOpen  span.availabilityOption{
 .embeddedChatListContainer{
     align-items: flex-start;
     align-content: flex-start;
-    overflow-y: visible;
+    overflow-y: auto;
     display: flex;
     flex-direction: column-reverse;
     overflow-wrap: break-word;
